<resources>
    <string name="app_name">AheersApp</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="add_to_cart">ADD TO CART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_open">Open the nav drawer</string>
    <string name="nav_drawer_close">Close the nav drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="test_values_for_output">TEST VALUES FOR OUTPUT</string>
    <string name="test_amount">R45,50</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="add_to_cart_text">ADD TO CART</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="menu">Menu</string>
    <string name="savories">Savories</string>
    <string name="meals">Meals</string>
    <string name="drinks">Drinks</string>
    <string name="cart">Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="history">History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="price">Price</string>
    <string name="total">TOTAL:</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="emptyCart">No items currently added to cart</string>
    <string name="welcome">Welcome to the Aheers App. Use the hamburger menu on the left to get started.</string>
    <string name="_2_x">2 x</string>
    <string name="total_price">Total Price:</string>
    <string name="update_Order">Update Item Order</string>
    <string name="remove_Order">Remove item Order</string>
    <string name="aheers">Aheers</string>
</resources>