<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@null"
        android:src="@drawable/aheers_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView">

        <LinearLayout
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_edges"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/green" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edges"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/green" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edges"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/green" />

                <EditText
                    android:id="@+id/conPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edges"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/register"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/register" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/green"
            app:layout_constraintStart_toStartOf="parent"></TextView>

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"></TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>