<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.ItemChangeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/mustard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgItem"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/latte"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:id="@+id/lnDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgItem">

                    <TextView
                        android:id="@+id/txtQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/_2_x"
                        android:textStyle="italic"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/test_values_for_output"
                        android:textStyle="italic"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/green"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lnDescription">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/total_price"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/txtTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/test_amount"
                        android:layout_gravity="end"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/txtHowMany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5">

                        </TextView>

                        <ImageView
                            android:id="@+id/imgAdd"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="48dp"
                            android:background="@drawable/image_background"
                            android:src="@drawable/ic_add"
                            android:contentDescription="@null"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imgRemove"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5">

                        </ImageView>

                        <TextView
                            android:id="@+id/txtQuantitySmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/imgAdd"
                            app:layout_constraintStart_toEndOf="@+id/imgRemove"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5">

                        </TextView>


                        <ImageView
                            android:id="@+id/imgRemove"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="48dp"
                            android:background="@drawable/image_background"
                            android:src="@drawable/ic_remove"
                            android:contentDescription="@null"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txtHowMany"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5">

                        </ImageView>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_Order"
                    android:layout_margin="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_Order"
                    android:layout_margin="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
                    app:layout_constraintStart_toStartOf="parent">

                </com.google.android.material.button.MaterialButton>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>